# cmake_recipes

./: CMakeLists.txt  FizzBuzz.cpp  FizzBuzz.hpp  hello-world.cpp  link-library.cpp  main.cpp  s_math_add.cpp  s_math_add.hpp  s_math_diff.cpp  s_math_diff.hpp  s_math_div.cpp  s_math_div.hpp  s_math_mult.cpp  s_math_mult.hpp
